--- a/appengine/static/html/index.html
+++ b/appengine/static/html/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<a href=/><h1>Museum Partner</h1></a>
+<h1><a href=/>Museum Partner</a></h1>
 <hr>
 <h2>Main Menu</h2>
 <a href="exhibit">Add New Exhibit</a><br>
