--- a/appengine/static/html/exhibit.html
+++ b/appengine/static/html/exhibit.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<a href=/><h1>Museum Partner</h1></a>
+<h1><a href="/">Museum Partner</a></h1>
 <hr>
 <h2>Add Exhibit</h2>
 <form action="/exhibit" method=post>
