--- a/appengine/static/html/gallery.html
+++ b/appengine/static/html/gallery.html
@@ -3,7 +3,7 @@
 <script src="/static/js/qrcode.js"></script>
 </head>
 <body>
-<a href=/><h1>Museum Partner</h1></a>
+<h1><a href=/>Museum Partner</a></h1>
 <hr>
 <h2>QR Code Gallery</h2>
 Click on Any QR Code below.<br>
