--- a/appengine/static/html/exhibit.html
+++ b/appengine/static/html/exhibit.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1><a href="/">{% block title %}Exhibit{% endblock %}</a></h1>
-<hr>
-<h2>Add Exhibit</h2>
-<form action="/exhibit" method=post>
-	<table>
-	<tr><td>QR Code</td><td><input type=text name=qrcode></td></tr>
-	<tr><td>Name</td><td><input type=text name=name></td></tr>
-    <tr><td>Info</td><td><textarea name=info rows=3 cols=60></textarea></td></tr>
-	<tr><td>Audio URL</td><td><input type=text name=audio></td></tr>
-	<tr><td>Wiki URL</td><td><input type=text name=wiki></td></tr>
-	<tr><td>Video URL</td><td><input type=text name=video></td></tr>
-	<tr><td></td><td><input type=submit value="Add Exhibit"></td></tr>
-	</table>
-</form>
+<article>
+	<h2><a href="#">{% block title %}Exhibit{% endblock %}</a></h2>
+	<form action="/exhibit" method=post>
+		<table>
+		<tr><td>QR Code</td><td><input type=text name=qrcode></td></tr>
+		<tr><td>Name</td><td><input type=text name=name></td></tr>
+	    <tr><td>Info</td><td><textarea name=info rows=3 cols=60></textarea></td></tr>
+		<tr><td>Audio URL</td><td><input type=text name=audio></td></tr>
+		<tr><td>Wiki URL</td><td><input type=text name=wiki></td></tr>
+		<tr><td>Video URL</td><td><input type=text name=video></td></tr>
+		<tr><td></td><td><input type=submit value="Add Exhibit"></td></tr>
+		</table>
+	</form>
+</article>	
 {% endblock %}
